# tree-sitter-streamdevice-proto

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bindings/c/: tree-sitter-streamdevice-proto.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_streamdevice_proto/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStreamdeviceProto/: streamdevice_proto.h
bindings/swift/TreeSitterStreamdeviceProtoTests/: TreeSitterStreamdeviceProtoTests.swift
examples/: example.proto
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  example.txt  format-converter.txt  strings.txt  variables.txt
test/highlight/: highlight.proto
