[package]
name = "tree-sitter-streamdevice-proto"
description = "tree-sitter grammar for StreamDevice's .proto files"
version = "0.2.0"
authors = ["Rémi NICOLE <remi.nicole@cea.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "epics", "streamdevice"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/minijackson/tree-sitter-streamdevice-proto"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
